most updated from round 2 of testing - missing new content

--- a/app/views/noticeofchange/index.html
+++ b/app/views/noticeofchange/index.html
@@ -15,6 +15,33 @@
 
 
 
+        <p class="govuk-!-font-weight-bold">Emails - generic across services  </p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/emailofremoved">You are no longer on record</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingonrecordaccepted">Go on record - review outcome - accepted</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingonrecordrejected">Go on record - review outcome - rejected</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingoffrecordaccepted">Go off record - review outcome - accepted</a></p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/emailgoingoffrecordrejected">Go off record - review outcome - rejected</a></p>
+
+
+        <br>
+        <br>
+
+        <p class="govuk-!-font-weight-bold">NOC starting pages</p>
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=divorce&">Caselist - Divorce</a></p>
+
+       <!--  <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=financialremedy&">Caselist - Financial Remedy</a></p>  -->
+
+        <p><a target="_blank" href="/noticeofchange/solicitor/caselist?hideone=false&hidetwo=false&hidethree=false&stoppingoutcome=auto&caselist=probate&">Caselist - Probate</a></p>
+
+
+        <!-- V2 Scenarios
+
 
         <p class="govuk-!-font-weight-bold">Divorce</p>
 
@@ -45,6 +72,10 @@
 
         <p><a target="_blank" href="/noticeofchange/solicitor/caselist?solicitorhasalready=false&hideone=true&hidetwo=true&hidethree=true&caseadded=false&caselist=probate&stoppingmoredetail=&">Scenario 7</a></p>
 
+        -->
+
+
+
 
         <br>
         <br><br>
@@ -69,7 +100,7 @@
 
 
 
-
+        <!--
 
         <p>Solicitor<br>
             <a href="solicitor/caselist">Case list</a><br>
@@ -100,6 +131,8 @@
              <a href="">Not registered with IDAM</a><br>
              <a href="">When case goes to paper</a>
         </p>
+
+        -->
 
     </div>
 </div>
