--- a/app/views/noticeofchange/solicitor/confirmationofstopping.html
+++ b/app/views/noticeofchange/solicitor/confirmationofstopping.html
@@ -19,7 +19,7 @@ Case details
                         <h1  class="govuk-panel__title">You have successfully stopped representation</h1>
                     </div>
                     <p class="govuk-!-margin-top-6">We've sent an email to confirm you’ve stopped representing this client.</p>
-                    <p>The case has been removed from the case and you no longer have access to it.</p>
+                    <p>The case has been removed from your caselist and you no longer have access to it.</p>
                     <p>We'll send the case to this client.</p>
 
                     <p class="govuk-body">
