--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -79,10 +79,10 @@ Case details
                     {% if data.caselist == 'divorce' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Date of marriage
+                                Client Name
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                {{data.day}} {{data.monthoutput}} {{data.year}}
+                                {{data.firstname}} {{data.lastname}}
                             </dd>
                             <dd class="govuk-summary-list__actions">
                                 <a class="govuk-link" href="securityquestiondivorce">
@@ -90,16 +90,32 @@ Case details
                                 </a>
                             </dd>
                         </div>
+
+
                     {% elseif data.caselist == 'probate' %}
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Client’s last name
+                                Deceased's name
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                Narran
+                                {{data.title}} {{data.firstname}} {{data.lastname}}
                             </dd>
                             <dd class="govuk-summary-list__actions">
                                 <a class="govuk-link" href="securityquestionprobate">
+                                    Change
+                                </a>
+                            </dd>
+                        </div>
+
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Deceased's date of birth
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                {{data.day}} {{data.monthoutput}} {{data.year}}
+                            </dd>
+                            <dd class="govuk-summary-list__actions">
+                                <a class="govuk-link" href="securityquestiondivorce">
                                     Change
                                 </a>
                             </dd>
