--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -45,7 +45,13 @@ Case details
         {% endif %}
             <div class="govuk-radios" id="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Petitioner" >
+                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Representing client" >
+                    <label class="govuk-label govuk-radios__label" for="radio1">
+                        Representing client
+                    </label>
+                </div>
+                <div class="govuk-radios__item">
+                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Executor" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
                         Executor
                     </label>
